# CODEX-Crystal-Optical-Data-Encoding-matriX

./: .gitignore  .replit  DEPLOYMENT.md  Dockerfile  QUICK_START.md  README-NEXTJS.md  README.md  cli.py  crystal_archive_cli.py  crystal_archive_demo.py  crystal_archive_main.py  crystal_archive_pipeline.py  crystal_archive_project.txt  crystal_archive_setup.txt  docker-compose.yml  flask_interface.py  next.config.js  package-lock.json  package.json  pyproject.toml  replit.md  requirements-web.txt  setup-nextjs.sh  show-urls.sh  simple_web_interface.py  start_web_interface.sh  start_working_interface.sh  tailwind.config.js  web_interface.py
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/community/: page.tsx
app/compliance/: page.tsx
app/contact/: page.tsx
app/demo/: page.tsx
app/docs/: page.tsx
app/gdpr/: page.tsx
app/get-started/: page.tsx
app/privacy/: page.tsx
app/security/: page.tsx
app/status/: page.tsx
app/support/: page.tsx
app/terms/: page.tsx
app/test/: page.tsx
app/tutorials/: page.tsx
components/: crystal-3d.tsx  cta.tsx  features.tsx  floating-elements.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  particle-background.tsx  pricing.tsx  responsive-background.tsx  stats.tsx  team.tsx  technology.tsx  testimonials.tsx  typewriter.tsx
components/ui/: badge.tsx  button.tsx
examples/sample_data/: README.txt  numbers.csv  poem.txt
lib/: utils.ts
src/crystal_archive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: index.html
tests/: README.md
(+20 files in other folders)
